# VideoStreamingServer

./: CMakeLists.txt  README.md
VideoStreamingServer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
VideoStreamingServer/Common/Utilities/: files.h  http.h
VideoStreamingServer/VideoStreamingServer/: Makefile  cmake_install.cmake
VideoStreamingServer/VideoStreamingServer/libdash/src/libdash_external-stamp/: libdash_external-gitinfo.txt
VideoStreamingServer/VideoStreamingServer/libdash/tmp/: libdash_external-gitclone.cmake  libdash_external-mkdirs.cmake
VideoStreamingServer/src/: VideoStream.cpp  VideoStream.h  VideoStreamingServer.cpp  VideoStreamingServer.h  main.cpp
VideoStreamingServer/src/Server/: Server.cpp  Server.h
VideoStreamingServer/src/Server/Controllers/REST/: RestAPI.cpp  RestAPI.h
VideoStreamingServer/src/Server/Controllers/REST/Routes/: VideoStreamingRoutes.cpp  VideoStreamingRoutes.h
VideoStreamingServer/src/Server/Controllers/WebSockets/: WebSockets.cpp  WebSockets.h
